--- a/addCredit.html
+++ b/addCredit.html
@@ -99,7 +99,7 @@
 						<input onblur="checkUsername()" id="username" placeholder="" name="classid" type="text" class="dfinput" style="width:345px;" />
 						<i id="usernameTip"></i>
 					</li>
-					<li><label>年级</label>
+					<li><label>年级<b> *</b></label>
 						<div class="vocation">
 							<select class="select3">
 								<option>请选择</option>
@@ -109,7 +109,7 @@
 							</select>
 						</div>
 					</li>
-					<li><label>院系</label>
+					<li><label>院系<b> *</b></label>
 						<div class="vocation">
 							<select class="select3">
 								<option>请选择</option>
@@ -124,7 +124,7 @@
 						<input onblur="checkMyphone()" id="myphone" placeholder="" name="classid" type="text" class="dfinput" style="width:345px;" />
 						<i id="myphoneTip"></i>
 					</li>
-					<li><label>事由</label>
+					<li><label>事由<b> *</b></label>
 						<div class="vocation">
 							<select class="select3">
 								<option>公开课</option>
