--- a/addCourse.html
+++ b/addCourse.html
@@ -129,7 +129,7 @@
 						<input onblur="checkMyname()" id="myname" placeholder="必填" name="classid" type="text" class="dfinput" style="width:345px;" />
 						<i id="mynameTip"></i>
 					</li>
-					<li><label>方式</label>
+					<li><label>方式<b>*</b></label>
 						<div class="vocation ">
 							<select class="select3 ">
 								<option>请选择</option>
