--- a/footer.html
+++ b/footer.html
@@ -9,7 +9,7 @@
 
 <body>
 	<div class="footer">
-    <span>英才汇硕信息科技有限公司</span>
+    <span>中北大学 2013040721 魏江旗</span>
     <i><a href=''></a></i>    
     </div>    
 </body>
